--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx hardhat run ./scripts/testSelectors.js --network hardhat"
+    "start": "npx hardhat run ./scripts/setEngines.js --network chapel"
   },
   "keywords": [],
   "author": "",
